k8s/base/services/identity-access-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-access-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: identity-access-service
  ports:
    - name: http
      port: 8081
      targetPort: http
